# target/generated-sources/swagger/src/main/java/com/keytiles/api/model/common/v2/CommonErrorCodes.java
@@ -2,7 +2,7 @@
  * Common object definitions
  * These object definitions are shared among multiple contracts
  *
- * OpenAPI spec version: 1.0
+ * OpenAPI spec version: 1.1
  * 
  *
  * NOTE: This class is auto generated by the swagger code generator program.
@@ -54,7 +54,8 @@ public enum CommonErrorCodes {
   MANDATORYEMAILSENDING_FAILED("mandatoryEmailSending_failed"),
   QUERY_LIMIT_REACHED("query_limit_reached"),
   FIELD_DEPRECATED("field_deprecated"),
-  DATA_CONTRADICTINGREQUEST("data_contradictingRequest");
+  DATA_CONTRADICTINGREQUEST("data_contradictingRequest"),
+  UNDERLYING_RESOURCE_UNAVAILABLE("underlying_resource_unavailable");
 
   private String value;
 
